painted gated star area, added gate, added a post

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+# note: added the usersettings line below
+# because I went to https://github.com/github/gitignore/blob/main/Unity.gitignore
+# and it had this line that wasn't here at first.
+/[Uu]ser[Ss]ettings/
+# and also this below:
+# Recordings can get excessive in size
+/[Rr]ecordings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -58,3 +65,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+# extra custom stuff to tryyy to retroactively ignore things that seem developer-personal
+#.vsconfig
+#*.dwlt
